Draft message logic added